// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sequence Navigation Tabs renders correctly with dropdown 1`] = `
<DocumentFragment>
  <div
    style="flex-basis: 100%; min-width: 0;"
  >
    <div
      class="sequence-navigation-tabs-container"
    >
      <div
        class="sequence-navigation-tabs d-flex flex-grow-1"
      >
        <button
          class="btn active"
          title="1"
          type="button"
        >
          <img
            alt="fa-book"
            class="fa-book"
            data-testid="icon"
          />
        </button>
        <button
          class="btn"
          title="2"
          type="button"
        >
          <img
            alt="fa-book"
            class="fa-book"
            data-testid="icon"
          />
        </button>
        <button
          class="btn"
          title="3"
          type="button"
        >
          <img
            alt="fa-book"
            class="fa-book"
            data-testid="icon"
          />
        </button>
        <button
          class="btn"
          title="4"
          type="button"
        >
          <img
            alt="fa-book"
            class="fa-book"
            data-testid="icon"
          />
        </button>
        <button
          class="btn"
          title="5"
          type="button"
        >
          <img
            alt="fa-book"
            class="fa-book"
            data-testid="icon"
          />
        </button>
        <button
          class="btn"
          title="6"
          type="button"
        >
          <img
            alt="fa-book"
            class="fa-book"
            data-testid="icon"
          />
        </button>
        <button
          class="btn"
          title="7"
          type="button"
        >
          <img
            alt="fa-book"
            class="fa-book"
            data-testid="icon"
          />
        </button>
        <button
          class="btn"
          title="8"
          type="button"
        >
          <img
            alt="fa-book"
            class="fa-book"
            data-testid="icon"
          />
        </button>
        <button
          class="btn"
          title="9"
          type="button"
        >
          <img
            alt="fa-book"
            class="fa-book"
            data-testid="icon"
          />
        </button>
        <button
          class="btn"
          title="10"
          type="button"
        >
          <img
            alt="fa-book"
            class="fa-book"
            data-testid="icon"
          />
        </button>
      </div>
    </div>
    <div
      class="dropdown sequence-navigation-dropdown"
    >
      <button
        aria-expanded="false"
        aria-haspopup="true"
        class="dropdown-toggle btn dropdown-button font-weight-normal w-100 border-right-0"
        id="pgn__dropdown-trigger-0"
      >
        <span>
          1 of 10
        </span>
      </button>
      <div
        aria-hidden="true"
        aria-labelledby="pgn__dropdown-trigger-0"
        class="dropdown-menu w-100"
        role="menu"
      >
        <button
          class="btn active w-100"
          title="1"
          type="button"
        >
          <img
            alt="fa-book"
            class="fa-book"
            data-testid="icon"
          />
          <span
            class="unit-title"
          >
            1
          </span>
        </button>
        <button
          class="btn w-100"
          title="2"
          type="button"
        >
          <img
            alt="fa-book"
            class="fa-book"
            data-testid="icon"
          />
          <span
            class="unit-title"
          >
            2
          </span>
        </button>
        <button
          class="btn w-100"
          title="3"
          type="button"
        >
          <img
            alt="fa-book"
            class="fa-book"
            data-testid="icon"
          />
          <span
            class="unit-title"
          >
            3
          </span>
        </button>
        <button
          class="btn w-100"
          title="4"
          type="button"
        >
          <img
            alt="fa-book"
            class="fa-book"
            data-testid="icon"
          />
          <span
            class="unit-title"
          >
            4
          </span>
        </button>
        <button
          class="btn w-100"
          title="5"
          type="button"
        >
          <img
            alt="fa-book"
            class="fa-book"
            data-testid="icon"
          />
          <span
            class="unit-title"
          >
            5
          </span>
        </button>
        <button
          class="btn w-100"
          title="6"
          type="button"
        >
          <img
            alt="fa-book"
            class="fa-book"
            data-testid="icon"
          />
          <span
            class="unit-title"
          >
            6
          </span>
        </button>
        <button
          class="btn w-100"
          title="7"
          type="button"
        >
          <img
            alt="fa-book"
            class="fa-book"
            data-testid="icon"
          />
          <span
            class="unit-title"
          >
            7
          </span>
        </button>
        <button
          class="btn w-100"
          title="8"
          type="button"
        >
          <img
            alt="fa-book"
            class="fa-book"
            data-testid="icon"
          />
          <span
            class="unit-title"
          >
            8
          </span>
        </button>
        <button
          class="btn w-100"
          title="9"
          type="button"
        >
          <img
            alt="fa-book"
            class="fa-book"
            data-testid="icon"
          />
          <span
            class="unit-title"
          >
            9
          </span>
        </button>
        <button
          class="btn w-100"
          title="10"
          type="button"
        >
          <img
            alt="fa-book"
            class="fa-book"
            data-testid="icon"
          />
          <span
            class="unit-title"
          >
            10
          </span>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Sequence Navigation Tabs renders correctly without dropdown 1`] = `
<DocumentFragment>
  <div
    style="flex-basis: 100%; min-width: 0;"
  >
    <div
      class="sequence-navigation-tabs-container"
    >
      <div
        class="sequence-navigation-tabs d-flex flex-grow-1"
      >
        <button
          class="btn active"
          title="1"
          type="button"
        >
          <img
            alt="fa-book"
            class="fa-book"
            data-testid="icon"
          />
        </button>
        <button
          class="btn"
          title="2"
          type="button"
        >
          <img
            alt="fa-book"
            class="fa-book"
            data-testid="icon"
          />
        </button>
        <button
          class="btn"
          title="3"
          type="button"
        >
          <img
            alt="fa-book"
            class="fa-book"
            data-testid="icon"
          />
        </button>
        <button
          class="btn"
          title="4"
          type="button"
        >
          <img
            alt="fa-book"
            class="fa-book"
            data-testid="icon"
          />
        </button>
        <button
          class="btn"
          title="5"
          type="button"
        >
          <img
            alt="fa-book"
            class="fa-book"
            data-testid="icon"
          />
        </button>
        <button
          class="btn"
          title="6"
          type="button"
        >
          <img
            alt="fa-book"
            class="fa-book"
            data-testid="icon"
          />
        </button>
        <button
          class="btn"
          title="7"
          type="button"
        >
          <img
            alt="fa-book"
            class="fa-book"
            data-testid="icon"
          />
        </button>
        <button
          class="btn"
          title="8"
          type="button"
        >
          <img
            alt="fa-book"
            class="fa-book"
            data-testid="icon"
          />
        </button>
        <button
          class="btn"
          title="9"
          type="button"
        >
          <img
            alt="fa-book"
            class="fa-book"
            data-testid="icon"
          />
        </button>
        <button
          class="btn"
          title="10"
          type="button"
        >
          <img
            alt="fa-book"
            class="fa-book"
            data-testid="icon"
          />
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
